Removes unused controller resources
Removes BonusCategoryController, TierController, and BonusTypeController.

These controllers are no longer needed because of changes to the bonus system.
